Fixed issue on firefox where input bar goes past login panel

--- a/login/static/login/site.css
+++ b/login/static/login/site.css
@@ -17,6 +17,7 @@
 }
 
 .form input {
+  max-width: 100%;
   display: block;
   margin-bottom: 1em;
 }
